main header added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <title></title>
 </head>
 <body>
+  <header>
+    <nav class="container">
+      <div>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="white glasses image">
+        <span>Tortoiseshell Optics</span>
+      </div>
+      <div class="menu">
+        <ul>
+          <li>Services</li>
+          <li>Products</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <div class="flex container">
+      <div class="headline">
+        <h1>DON'T JUST LOOK, SEE</h1>
+      </div>  
+    </div>
+  </header>
 
 
 </body>
