--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title></title>
 </head>
 <body>
+
+  <!-- Header and Main Banner -->
   <header>
     <nav class="container">
       <div>
@@ -23,10 +25,54 @@
     <div class="flex container">
       <div class="headline">
         <h1>DON'T JUST LOOK, SEE</h1>
-      </div>  
+      </div>
     </div>
   </header>
 
+<!-- About section -->
+
+  <div class="about container">
+    <div class="services">
+      <div class="service paper">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/paper-icon.png" alt="paper">
+        <span>Comprehensive Exams</span>
+      </div>
+      <div class="service ruler">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/ruler-icon.png" alt="ruler">
+        <span>Custom Fittings</span>
+      </div>
+      <div class="service truck">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/truck-icon.png" alt="truck">
+        <span>Fast Delivery</span>
+      </div>
+    </div>
+    <div class="info container">
+      <div class="infopoint">
+        <div class="infotitle philosophy">
+           <span>PHILOSOPHY</span>
+        </div>
+        <div class="infotext">
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
+        </div>
+      </div>
+      <div class="infopoint">
+        <div class="infotitle appointments">
+          <span>APPOINTMENTS</span>
+        </div>
+        <div class="infotext">
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--Footer-->
+
+  <footer class="container">
+    <div>
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png" alt="white glasses image">
+      <span> Copyright Tortoiseshell Optics</span>
+    </div>
 
 </body>
 </html>
