--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           <li>Products</li>
           <li>Contact</li>
         </ul>
+         <ul class="minimenu">
+          <li>Menu</li>
+        </ul>
+
       </div>
     </nav>
     <div class="flex container">
